# C_http

./: CMakeLists.txt  README.md  main.c  run.sh
include/: coroutine.h  handleClient.h  httpBuilder.h  utils.h
modules/: CMakeLists.txt
modules/coroutine/: CMakeLists.txt  coroutine.c
modules/http/: CMakeLists.txt
modules/utils/: CMakeLists.txt
resources/templates/: home.html
src/: CMakeLists.txt  handleClient.c
src/http/: httpBuilder.c
src/utils/: utils.c
